# sflaunch

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
schemas/: cluster.schema.json  megatron-job.schema.json
scripts/: generate_schemas.py
src/sflaunch/: launchers.py
src/sflaunch/runners/: megarun.py
src/sflaunch/schemas/: cli_args.py  cluster.py
src/sflaunch/schemas/jobs/: base.py  megatron.py
src/sflaunch/templates/: torchrun.py
src/sflaunch/utils/: __init__.py  formatters.py  tmux.py
src/sfutils/: launchers.py
src/sfutils/runners/: megarun.py
src/sfutils/schemas/jobs/: megatron.py
src/sfutils/templates/: torchrun.py
src/sfutils/utils/: __init__.py  formatters.py  log.py  tmux.py
